# 1kEE

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/cache_builder/: Cargo.toml  build.rs
crates/cache_builder/src/: admin.md  admin.rs  app.md  app.rs  args.md  args.rs  contours.rs  flat_node_store.rs  geojson.md  geojson.rs  job.md  job.rs  lunar.md  lunar.rs  main.md  main.rs  marching_squares.md  marching_squares.rs  mars.rs  node_store.md  node_store.rs  planet_all.rs  roads.md  roads.rs  srtm.rs  util.md  util.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.md  app.rs  arcgis_source.rs  camera_registry.md  camera_registry.rs  camera_scrape_catalog.md  camera_scrape_catalog.rs  camera_source_catalog.md  camera_source_catalog.rs  city_catalog.md  city_catalog.rs  event_store.rs  factal_stream.md  factal_stream.rs  flight_tracks.rs  main.md  main.rs  model.md  model.rs  moving_tracks.rs  osm_ingest.md  osm_ingest.rs  planet_ephemeris.rs  s2_underground.rs  settings_store.md  settings_store.rs  stellar_catalog.rs  stellar_time.rs  terrain_assets.md  terrain_assets.rs  terrain_precompute.md  terrain_precompute.rs  theme.md  theme.rs
crates/desktop/src/model/: arcgis.rs  cameras.rs  events.rs  flights.rs  geo.rs  geojson_layer.md  geojson_layer.rs  kml_layer.md  kml_layer.rs  mod.rs  replay.rs  vessels.rs
crates/desktop/src/osm_ingest/: db.rs  inventory.rs  job_dispatch.md  job_dispatch.rs  mod.md  mod.rs  roads_global.rs  roads_osmium.md  roads_osmium.rs  roads_overpass.md  roads_overpass.rs  roads_stream.rs  roads_vector_cache.md  roads_vector_cache.rs  util.rs  water.rs
crates/desktop/src/panels/: camera_list.md  camera_list.rs  event_list.md  event_list.rs  factal_brief.md  factal_brief.rs  factal_settings.md  factal_settings.rs  header.md  header.rs  layer_drawer.rs  mod.md  mod.rs  replay_controls.rs  status_log.md  status_log.rs  stellar_observatory.rs  terrain_library.md  terrain_library.rs  world_map.md  world_map.rs
crates/desktop/src/panels/world_map/: admin_layer.md  admin_layer.rs  building_layer.rs  camera.md  camera.rs  cell_loader.rs  contour_asset.md  contour_asset.rs  gebco_depth_fill.rs  gebco_raster.rs  globe_pass.rs  globe_scene.md  globe_scene.rs  graticule.rs  infra_layer.rs  (+22 more)
(+36 files in other folders)
