[package]
name = "one-thousand-electric-eye-cache-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.31"
osmpbf = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
