[package]
name = "one-thousand-electric-eye-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
