[package]
name = "one-thousand-electric-eye-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts"] }
bytemuck = { version = "1", features = ["derive"] }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
osmpbf = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
cell-format = { path = "../cell_format" }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
